<resources>
    <string name="app_name">Mobile Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Confinement</string>
    <string name="nav_header_subtitle">L\'appli du confinement</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo_list">ToDo List</string>
    <string name="map">Carte</string>
    <string name="compass">Boussole</string>
    <string name="calendar">Agenda</string>
    <string name="Test">test</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Titre</string>
    <string name="deadline">Deadline</string>
    <string name="create">Créer</string>
    <string name="category">Categorie</string>
    <string name="update">Mettre à jour</string>
    <string name="photo">Photo</string>

    <string-array name="categories">
        <item>alimentation</item>
        <item>santé</item>
        <item>sport</item>
        <item>animaux</item>
    </string-array>
</resources>
